--- a/addons-593/base593/views/base593_actions.xml
+++ b/addons-593/base593/views/base593_actions.xml
@@ -67,5 +67,49 @@
             <field name = "view_id" ref = "base593_Type_Person_Form"/>
             <field name = "act_window_id" ref = "base593_type_person_action"/>
         </record>
+        <!-- ********************************
+        Actions para base593_type_document
+        **********************************-->
+        <record id = "base593_type_document_action" model = "ir.actions.act_window">
+            <field name = "name">Tipos de Documento</field>
+            <field name = "res_model">base593.type.document</field>
+            <field name = "view_mode">tree,form</field>
+        </record> 
+        <!-- TREE -->
+        <record id = "base593_type_document_tree" model = "ir.actions.act_window.view">
+            <field eval = "1" name = "sequence"/>
+            <field name = "view_mode">tree</field>
+            <field name = "view_id" ref = "base593_Type_Document_Tree"/>
+            <field name = "act_window_id" ref = "base593_type_document_action"/>
+        </record>
+        <!-- FORMA -->
+        <record id = "base593_type_document_form" model = "ir.actions.act_window.view">
+            <field eval = "2" name = "sequence"/>
+            <field name = "view_mode">form</field>
+            <field name = "view_id" ref = "base593_Type_Document_Form"/>
+            <field name = "act_window_id" ref = "base593_type_document_action"/>
+        </record>
+        <!-- ********************************
+        Actions para base593_document_status
+        **********************************-->
+        <record id = "base593_document_status_action" model = "ir.actions.act_window">
+            <field name = "name">Estado de documentos</field>
+            <field name = "res_model">base593.document.status</field>
+            <field name = "view_mode">tree,form</field>
+        </record> 
+        <!-- TREE -->
+        <record id = "base593_document_status_tree" model = "ir.actions.act_window.view">
+            <field eval = "1" name = "sequence"/>
+            <field name = "view_mode">tree</field>
+            <field name = "view_id" ref = "base593_Document_Status_Tree"/>
+            <field name = "act_window_id" ref = "base593_document_status_action"/>
+        </record>
+        <!-- FORMA -->
+        <record id = "base593_document_status_form" model = "ir.actions.act_window.view">
+            <field eval = "2" name = "sequence"/>
+            <field name = "view_mode">form</field>
+            <field name = "view_id" ref = "base593_Document_Status_Form"/>
+            <field name = "act_window_id" ref = "base593_document_status_action"/>
+        </record>
     </data>
 </odoo>
